<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   	<!-- 表示領域 -->
	<TextView
		android:id="@+id/CalcResult"
		android:text="0" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:textSize="@dimen/text_size_big2"
		android:background="@drawable/border_text" 
		android:gravity="center|center"
		android:layout_margin="@dimen/padding_small" 
	    android:padding="@dimen/padding_small"
		/>		
    
    <!-- テンキー -->
        <TableLayout
            android:layout_width="match_parent" 
            android:layout_height="match_parent"
			android:background="@drawable/background"
            android:layout_weight="1"
            >

            <TableRow android:layout_weight="1" android:layout_height="0dip" android:layout_width="match_parent">
				
				<Button 
					android:id="@+id/Button1" 
					android:layout_width="0dip"  
					android:layout_height="match_parent" 
					android:layout_weight="1"
					android:layout_margin="@dimen/padding_small" 
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
					android:text="@string/dow_1" 
					android:textColor="@color/black" 
					android:textSize="@dimen/text_size_big2"
					android:background="@drawable/button_dial" 
				/>
				<Button 
					android:id="@+id/Button2" 
					android:layout_width="0dip"  
					android:layout_height="match_parent" 
					android:layout_weight="1"
					android:layout_margin="@dimen/padding_small" 
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
					android:text="@string/dow_2" 
					android:textColor="@color/black" 
					android:textSize="@dimen/text_size_big2"
					android:background="@drawable/button_dial" 
				/>
				<Button 
					android:id="@+id/Button3" 
					android:layout_width="0dip"  
					android:layout_height="match_parent" 
					android:layout_weight="1"
					android:layout_margin="@dimen/padding_small" 
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
					android:text="@string/dow_3" 
					android:textColor="@color/black" 
					android:textSize="@dimen/text_size_big2"
					android:background="@drawable/button_dial" 
				/>

			</TableRow>

            <TableRow android:layout_weight="1" android:layout_height="0dip" android:layout_width="match_parent">
				
				<Button 
					android:id="@+id/Button4" 
					android:layout_width="0dip"  
					android:layout_height="match_parent" 
					android:layout_weight="1"
					android:layout_margin="@dimen/padding_small" 
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
					android:text="@string/dow_4" 
					android:textColor="@color/black" 
					android:textSize="@dimen/text_size_big2"
					android:background="@drawable/button_dial" 
				/>
				<Button 
					android:id="@+id/Button5" 
					android:layout_width="0dip"  
					android:layout_height="match_parent" 
					android:layout_weight="1"
					android:layout_margin="@dimen/padding_small" 
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
					android:text="@string/dow_5" 
					android:textColor="@color/black" 
					android:textSize="@dimen/text_size_big2"
					android:background="@drawable/button_dial" 
				/>
				<Button 
					android:id="@+id/Button6" 
					android:layout_width="0dip"  
					android:layout_height="match_parent" 
					android:layout_weight="1"
					android:layout_margin="@dimen/padding_small" 
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
					android:text="@string/dow_6" 
					android:textColor="@color/black" 
					android:textSize="@dimen/text_size_big2"
					android:background="@drawable/button_dial" 
				/>

			</TableRow>

            <TableRow android:layout_weight="1" android:layout_height="0dip" android:layout_width="match_parent">
				
				<Button 
					android:id="@+id/Button7" 
					android:layout_width="0dip"  
					android:layout_height="match_parent" 
					android:layout_weight="1"
					android:layout_margin="@dimen/padding_small" 
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
					android:text="@string/dow_7" 
					android:textColor="@color/black" 
					android:textSize="@dimen/text_size_big2"
					android:background="@drawable/button_dial" 
				/>
				<Button 
					android:id="@+id/Button8" 
					android:layout_width="0dip"  
					android:layout_height="match_parent" 
					android:layout_weight="1"
					android:layout_margin="@dimen/padding_small" 
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
					android:text="@string/dow_8" 
					android:textColor="@color/black" 
					android:textSize="@dimen/text_size_big2"
					android:background="@drawable/button_dial" 
				/>
				<Button 
					android:id="@+id/Button9" 
					android:layout_width="0dip"  
					android:layout_height="match_parent" 
					android:layout_weight="1"
					android:layout_margin="@dimen/padding_small" 
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
					android:text="@string/dow_9" 
					android:textColor="@color/black" 
					android:textSize="@dimen/text_size_big2"
					android:background="@drawable/button_dial" 
				/>

			</TableRow>

		    <TableRow android:layout_weight="1" android:layout_height="0dip" android:layout_width="wrap_content">
				
				<Button 
					android:id="@+id/Button_Star" 
					android:layout_width="0dip"  
					android:layout_height="match_parent" 
					android:layout_weight="1"
					android:layout_margin="@dimen/padding_small" 
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
					android:text="@string/dow_star" 
					android:textColor="@color/black" 
					android:textSize="@dimen/text_size_big2"
					android:background="@drawable/button_dial" 
				/>
				<Button 
					android:id="@+id/Button0" 
					android:layout_width="0dip"  
					android:layout_height="match_parent" 
					android:layout_weight="1"
					android:layout_margin="@dimen/padding_small" 
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
					android:text="@string/dow_0" 
					android:textColor="@color/black" 
					android:textSize="@dimen/text_size_big2"
					android:background="@drawable/button_dial" 
				/>
				<Button
				    android:id="@+id/Button_Sharp"
				    android:layout_width="0dip"
				    android:layout_height="match_parent"
				    android:layout_margin="@dimen/padding_small"
				    android:layout_weight="1"
				    android:minWidth="@dimen/button_size"
				    android:minHeight="@dimen/button_size"
				    android:text="@string/dow_sharp"
				    android:textColor="@color/black"
					android:textSize="@dimen/text_size_big2"
				    android:background="@drawable/button_dial"
				/>

			</TableRow>

		</TableLayout>
	
	<LinearLayout
	    android:id="@+id/bottom"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:background="@color/silver"
	    >    
	    <Button
			android:id="@+id/input"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="@dimen/padding_small"
			android:layout_weight="1"
			android:text="@string/menu_input"
			android:textColor="@color/white" 
			android:textSize="@dimen/text_size_big"
			android:background="@drawable/button_ok" 
		/>
	    <Button
			android:id="@+id/cancel"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="@dimen/padding_small"
			android:layout_weight="1"
			android:text="@string/menu_cancel"
			android:textColor="@color/white" 
			android:textSize="@dimen/text_size_big"
			android:background="@drawable/button_cancel" 
		/>
	</LinearLayout>

</LinearLayout>
    