<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   	<!-- 文章 -->
	<EditText
		android:id="@+id/word_nameText"
		android:hint="@string/required"
		android:textSize="@dimen/text_size_big"
		android:layout_marginTop="10dip"
		android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"
		android:layout_marginBottom="10dip"
		android:inputType="textMultiLine"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
		
    <!-- 一覧表示用リスト -->
	<ListView
		android:id="@+id/list"
		android:background="@drawable/background"
		android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

	<LinearLayout
	    android:id="@+id/bottom"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:background="@color/silver"
	    >    
	    <Button
			android:id="@+id/cancel"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="@dimen/padding_small"
			android:layout_weight="1"
			android:text="@string/menu_cancel"
			android:textColor="@color/white" 
			android:textSize="@dimen/text_size_big"
			android:background="@drawable/button_gray" 
		/>
		<Button 
			android:id="@+id/delete" 
	    	android:layout_width="match_parent"
      		android:layout_height="match_parent"
      		android:layout_weight="1"
      		android:layout_margin="@dimen/padding_small"
			android:text="@string/menu_delete" 
			android:textColor="@color/black" 
            android:textSize="@dimen/text_size_big"
			android:background="@drawable/button_bottom" 
		/>
	    <Button
			android:id="@+id/save"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="@dimen/padding_small"
			android:layout_weight="1"
			android:text="@string/menu_save"
			android:textColor="@color/white" 
			android:textSize="@dimen/text_size_big"
			android:background="@drawable/button_ok" 
		/>
	</LinearLayout>

</LinearLayout>
    